@@ -1,3 +1,8 @@
+2015-09-10  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * org/jfree/chart/renderer/xy/YIntervalRenderer.java
+    (drawItem): Check item visibility.
+
 2015-09-09  David Gilbert  <david.gilbert@object-refinery.com>
 
     * org/jfree/chart/renderer/xy/XYShapeRenderer.java
